include(CTest)

function(yk_json20_add_test test_name)
    set(target_name yk_json20_${test_name}_test)
    add_executable(${target_name} ${test_name}.cpp)
    target_compile_features(${target_name} PRIVATE cxx_std_23)
    target_link_libraries(${target_name} PRIVATE json20)
    find_package(Catch2 CONFIG REQUIRED)
    target_link_libraries(${target_name} PRIVATE Catch2::Catch2WithMain)
    add_test(NAME ${target_name} COMMAND ${target_name})
endfunction()

yk_json20_add_test(json)
yk_json20_add_test(main)
yk_json20_add_test(parse)
yk_json20_add_test(util)
